# Knee-Segmentation---Diffusion-Models

./: .gitignore  Makefile  README.md  conf_matrix.py  eval.txt  evaluate.py  plot_loss.py  predict.py  predict_2d.py  predict_3d.py  pyproject.toml  requirements.txt  std.py  train.py
data/: __init__.py  dataset.py  paths.txt  split.py  split_from_paths.py
data/.ipynb_checkpoints/: dataset-checkpoint.py
data/raw/: README.md
data/splitted/: README.md
diffusion/: __init__.py  gaussian_diffusion.py  schedules.py
diffusion/.ipynb_checkpoints/: gaussian_diffusion-checkpoint.py
experiments/: pretrain.py  trainer.py
experiments/.ipynb_checkpoints/: trainer-checkpoint.py
results/: README.md
results/params/: class_weights.pt  mean_std.pt
unet/: __init__.py  gaussian_blur.py  unet.py
utils/: __init__.py  dataset.py  postprocessing.py  preprocessing.py  split.py
utils/.ipynb_checkpoints/: postprocessing-checkpoint.py  preprocessing-checkpoint.py
