[project]
name = "Knee-Segmentation---Diffusion-Models"
version = "0.0.1"
description = "Knee Segmentation using Diffusion Models"
authors = [
  { name = "Juraj Peric" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | .*/venv/.*
  | venv
)/
'''

[tool.ruff]
line-length = 99
[tool.ruff.lint]
select = ["E", "F", "C", "W"]
ignore = ["E501","C901"]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
     "**/venv/**"
]

[tool.ruff.lint.isort]
known-first-party = ["Knee-Segmentation---Diffusion-Models"]
